--- a/Wpf/appsettings.json
+++ b/Wpf/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "PlayTech": "Server=LAPTOP-FH7O0GOB\\SQLEXPRESS;Database=PlayTech;Trusted_Connection=True; TrustServerCertificate = True;"
+    "PlayTech": "Server=GAUDAN\\GauDan;Database=PlayTech;Trusted_Connection=True; TrustServerCertificate = True;"
   }
 }
