--- a/Wpf/Wpf.csproj
+++ b/Wpf/Wpf.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="ava.jpg" />
+    <None Remove="Images\avatar\638571985008791277.jpg" />
     <None Remove="Images\Background.png" />
     <None Remove="Images\Background2.png" />
     <None Remove="Images\BackgroundLogin.png" />
@@ -29,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\avatar\638571985008791277.jpg" />
     <Resource Include="Images\Background.png" />
     <Resource Include="Images\Background2.png" />
     <Resource Include="Images\BackgroundLogin.png" />
